# hsys-demo

./: .clangd  CMakeLists.txt  README.md
cmake/misc/: scc.cmake
work1/: CMakeLists.txt
work1/benchmarks/: CMakeLists.txt
work1/benchmarks/src/: benchmarks.cu
work1/core/: CMakeLists.txt
work1/core/include/work1/: data_block.cuh  kinds.cuh  vector.cuh  vector_accessor.cuh  vector_operators.cuh
work1/core/include/work1/kernels/: kernel_vector_add.cuh
work1/tests/: CMakeLists.txt
work1/tests/src/: vector_add_test.cu  vector_test.cu
work1/utils/benchmark_pp/: complexity_chart.py  dry.py  speedup_chart.py
work1/utils/cuda_timer/: CMakeLists.txt
work1/utils/cuda_timer/include/: cuda_timer.hpp
work1/utils/cuda_timer/src/: cuda_timer.cpp
work1/utils/cudagh/: CMakeLists.txt
work1/utils/cudagh/include/: cudagh.hpp
